syntax = "proto3";

option go_package = "github.com/JHU-Delivery-Robot/Server/spec";

package spec;

service router {
  rpc GetRoute(Coords) returns (RoutePoint) {}
  rpc SendStatus(RobotStatus) returns (StatusConfirmation) {}
}

message Point {
  double longitude = 1;
  double latitude = 2;
}


message Coords {
  double x = 1;
  double y = 2;
}

message RoutePoint {
  double longitude = 1;
  double latitude = 2;
}

message RobotStatus {
  enum Status {
    IDLE = 0;
    TRANSIT = 1;
    AWAITINGROUTE = 2;
    ARRIVED = 3;
    CHARGING = 4;
    VIRTUAL = 5;
  }
  Status id = 1;
  string message = 2;
  Point location = 3;
}

message StatusConfirmation {
  int32 errors = 1;
}